fix: Text not wrapping in submitted preview

--- a/src/form/render/submitted/userInput/userInput.scss
+++ b/src/form/render/submitted/userInput/userInput.scss
@@ -25,7 +25,7 @@
       }
     }
     &:last-child {
-      flex: 1 0 auto;
+      flex: 1 1 auto;
     }
     > *:first-child {
       margin-top: 0 !important;
